--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -2,56 +2,26 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: #121212;
-  /* height: 20vh; */
+  background-color: #202020;
 }
+
 .nav-content {
   display: flex;
   align-items: center;
   justify-content: space-between;
   width: 90%;
-  /* background-color: aqua; */
-  padding: 15px 0 25px 0;
+  max-width: 1110px;
+  padding: 15px 0px 25px 0px;
 }
 
-.nav-bar-mobile-container {
+.nav-bar-mobile-logo-container {
   display: flex;
   justify-content: space-between;
   width: 100%;
 }
 
 @media screen and (min-width: 768px) {
-  .nav-bar-mobile-container {
-    display: none;
-  }
-}
-
-.nav-bar-mobile-icons-container {
-  display: flex;
-  align-items: center;
-  list-style-type: none;
-  /* background-color: #4f46e5; */
-}
-
-.nav-mobile-btn {
-  border: none;
-  padding: 0px;
-  background: transparent;
-  cursor: pointer;
-  outline: none;
-  font-size: 24px;
-  color: #ffffff;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.nav-item-mobile-link {
-  font-size: 24px;
-  color: #ffffff;
-  margin-right: 20px;
-}
-@media screen and (min-width: 768px) {
-  .nav-mobile-btn {
+  .nav-bar-mobile-logo-container {
     display: none;
   }
 }
@@ -61,7 +31,7 @@
   align-items: center;
   justify-content: space-between;
   width: 100%;
-  /* background-color: white; */
+  max-width: 1110px;
 }
 
 @media screen and (max-width: 767px) {
@@ -89,7 +59,6 @@
   list-style-type: none;
   margin-top: 0px;
   margin-bottom: 0px;
-  /* background-color: aqua; */
 }
 
 @media screen and (max-width: 767px) {
@@ -115,14 +84,8 @@
   align-items: center;
   text-decoration: none;
   color: #ffffff;
-  font-size: 20px;
 }
-.large-device-button-container {
-  display: flex;
-  justify-content: flex-end;
-  /* background-color: white; */
-  margin-top: 10px;
-}
+
 .logout-desktop-btn {
   font-family: 'Roboto';
   font-weight: 600;
@@ -138,6 +101,35 @@
 
 @media screen and (max-width: 767px) {
   .logout-desktop-btn {
+    display: none;
+  }
+}
+.nav-bar-mobile-icons-container {
+  display: flex;
+  align-items: center;
+  list-style-type: none;
+}
+
+.nav-mobile-btn {
+  border: none;
+  padding: 0px;
+  background: transparent;
+  cursor: pointer;
+  outline: none;
+  font-size: 24px;
+  color: #ffffff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.nav-item-mobile-link {
+  font-size: 24px;
+  color: #ffffff;
+  margin-right: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .nav-mobile-btn {
     display: none;
   }
 }
