--- a/src/components/JobItemDetails/index.css
+++ b/src/components/JobItemDetails/index.css
@@ -86,7 +86,6 @@
   display: flex;
   flex-direction: column;
   background-color: #202020;
-  /* background-color: white; */
   padding: 25px;
   border-radius: 15px;
   margin-bottom: 25px;
@@ -100,7 +99,6 @@
 .logo-title-location-container {
   display: flex;
   flex-direction: column;
-  /* background-color: white; */
 }
 .logo-title-container {
   display: flex;
@@ -146,7 +144,6 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  /* background-color: white; */
 }
 .location-employee-container {
   display: flex;
@@ -244,6 +241,7 @@
 .similar-jobs-list {
   display: flex;
   flex-direction: column;
+  flex-wrap: wrap;
   padding-left: 0;
 }
 
